--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="big-black-box">
+      <p id="text">
+        Dr. Whalen decided to put a big black box here so I did too
+      </p>
+      <button type="button" id="btn">Click Me!</button>
+      <ul>
+        <li class="point">1</li>
+        <li class="point">2</li>
+        <li class="point">3</li>
+      </ul>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
