--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DOM Project horray</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="big-black-box">
-      <p id="text">
-        Dr. Whalen decided to put a big black box here so I did too
-      </p>
-      <button type="button" id="btn">Click Me!</button>
-      <ul>
-        <li class="point">1</li>
-        <li class="point">2</li>
-        <li class="point">3</li>
-      </ul>
+    <div id="container-box">
+      <h1>Input Roblox Game Information</h1>
+      <form id="game-submission">
+        <input type="text" id="name" placeholder="Enter Name" required>
+        <input type="description" id="description" placeholder="Enter a description" required>
+        <input type="url" id="image-url" placeholder="Enter Image URL">
+        <button type="submit">Submit</button>
+      </form> 
+
+      <h2>Game List</h2>
+      <div id="Game-List"></div>
     </div>
 
     <script src="index.js"></script>
