--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="container-box">
       <h1>Input Roblox Game Information</h1>
-      <form id="game-submission">
+      <form id="game-form">
         <input type="text" id="name" placeholder="Enter Name" required>
         <input type="description" id="description" placeholder="Enter a description" required>
         <input type="url" id="image-url" placeholder="Enter Image URL">
@@ -16,7 +16,7 @@
       </form> 
 
       <h2>Game List</h2>
-      <div id="Game-List"></div>
+      <div id="game-list"></div>
     </div>
 
     <script src="index.js"></script>
