--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </form> 
 
       <h2>Game List</h2>
-      <div id="game-list"></div>
+      <div id="gameList"></div>
     </div>
 
     <script src="index.js"></script>
